--- a/style.css
+++ b/style.css
@@ -1,17 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
 
-
-body {
-  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
-  background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  min-height: 100vh;
-  height: 100%;
-  font-family: "Poppins", sans-serif;
+body,*{
+  margin: 0;
+  padding: 0;
 }
 /* width */
 body::-webkit-scrollbar {
@@ -21,7 +13,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-track {
   background: #1b1b1b; 
 }
- 
+
 /* Handle */
 body::-webkit-scrollbar-thumb {
   background-color: #743ad5;
@@ -32,16 +24,126 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover {
   background: #d53a9d; 
 }
+
+body {
+  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  background-attachment: fixed;
+  min-height: 100vh;
+  height: auto;
+  font-family: "Poppins", sans-serif;
+  /* overflow-x: hidden; */
+}
 .dark-body {
   background-color: #1b1b1b;
   background-image: none;
 }
+
+.navbar{
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  /* background-color: rgb(245, 241, 241); */
+  background-color: rgb(175, 193, 238,.5);
+  backdrop-filter: blur(10px);
+  min-height: 10vh;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2.5rem;
+  padding: 0.5rem 2rem;
+}
+.navbar::after{
+  content:" ";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 0.25rem;
+  background: -webkit-linear-gradient(#743ad5, #d53a9d);
+  
+}
+#logo{
+  position: relative;
+  margin-top: 1rem;
+}
+
+#logo span{
+  font-family: 'Ephesis', cursive;
+  background: -webkit-linear-gradient(#743ad5, #d53a9d);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: xx-large;
+  font-weight: bold;
+  white-space: nowrap;
+}
+
+#logo img{
+  position: absolute;
+  left: 0;
+  top: -0.75rem;
+  height: 20px;
+  width: 20px;
+  transform: rotate(-20deg);
+}
+.nav-links{
+  display: flex;
+  list-style-type: none;
+  margin-top: 0;
+}
+.nav-links li{
+  position: relative;
+  margin-left: 2rem;
+}
+.nav-link{
+  text-decoration: none;
+  color: white;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-size: 300% 100%;
+  background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+  box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+  border-radius: 4px;
+  padding: 0.125rem 0.25rem;
+  cursor: pointer;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.nav-link:hover{
+  background-position: 100% 0;
+  box-shadow: 4px 8px 20px rgba(52, 35, 75, 0.75);
+  outline: 2px solid white;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.login-btn{
+  background: #fff;
+  background-color: #fff;
+  color: #743ad5;
+}
+.login-btn:hover{
+  box-shadow: 4px 8px 20px rgba(52, 35, 75, 0.75);
+  outline: 2px solid #743ad5;
+}
+
+
 .cat {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 30px;
+  margin: 1.5rem;
 }
 .container {
   position: relative;
@@ -93,7 +195,7 @@ body::-webkit-scrollbar-thumb:hover {
   color: lightblue;
   cursor: pointer;
 }
-img {
+.cat-img {
   object-fit: contain;
   height: 150px;
   width: 150px;
@@ -159,7 +261,7 @@ img {
 }
 .modal-bg {
   display: none;
-  z-index: 1000;
+  z-index: 9999999;
   height: 100%;
   width: 100%;
   position: fixed;
@@ -222,15 +324,16 @@ img {
   z-index: 1;
 }
 #close-modal {
-  position: fixed;
-  right: 10px;
-  top: 5px;
+  position: absolute;
+  right: 0.25rem;
+  top: 0.5rem;
   padding: 10px 20px;
   outline: none;
   border: none;
   border-radius: 4px;
   background-color: rgb(182, 45, 45);
   color: white;
+  z-index: 9999999;
 }
 #close-modal:hover {
   filter: brightness(0.85);
