--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   right: 0;
   z-index: 999;
   /* background-color: rgb(245, 241, 241); */
-  background-color: rgb(175, 193, 238,.5);
+  background-color: rgba(0, 0, 0, 0.75);
   backdrop-filter: blur(10px);
   min-height: 10vh;
   height: auto;
@@ -110,7 +110,7 @@ body {
   border: none;
   background-size: 300% 100%;
   background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
-  box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+  box-shadow: 0 4px 15px 0 rgba(32, 30, 36, 0.75);
   border-radius: 4px;
   padding: 0.125rem 0.25rem;
   cursor: pointer;
@@ -120,7 +120,7 @@ body {
 }
 .nav-link:hover{
   background-position: 100% 0;
-  box-shadow: 4px 8px 20px rgba(52, 35, 75, 0.75);
+  box-shadow: 4px 8px 20px rgba(0, 0, 0, 0.75);
   outline: 2px solid white;
   -o-transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
@@ -524,7 +524,7 @@ body {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0.5rem;
+  top: 5rem;
   left: 0;
   width: 100%;
   background-color: transparent;
@@ -595,6 +595,13 @@ body {
   box-shadow: 4px 6px 0px #743ad5;
 }
 .searched-meal-img{
+  object-fit: contain;
+  border-radius: 100%;
+  border: solid 2px transparent;
+  background-image: linear-gradient(white, white),
+    radial-gradient(circle at top left, #743ad5, #d53a9d);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
   transition: all ease 300ms;
 }
 .searched-meal-img:hover{
