--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,8 @@ body {
   .hamburger{
     position: fixed;
     right: 2rem;
-    top: 1.25rem;
+    top: 50%;
+    transform: translate(0,-40%);
     display: block;
   }
   .navbar{
