--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,12 @@ body {
     transform: translate(0,-40%);
     display: block;
   }
+  .hamburger.responsive{
+    position: fixed;
+    right: 2rem;
+    top: 2.5rem;
+    display: block;
+  }
   .navbar{
     transition: all ease 300ms;
   }
