--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ body {
   .nav-links.responsive{
     transform: translateX(0);
     display: flex;
+    flex-direction: column;
     justify-content: stretch;
     align-items: stretch;
     gap: 5rem;
@@ -156,9 +157,11 @@ body {
   .nav-links{
     transform: translateX(-100%);
     display: none;
-    flex-direction: column;
     width: 100%;
     margin-left: 0;
+  }
+  .nav-link{
+    padding: 0.75rem 0.5rem !important;
   }
 }
 .nav-links li{
