--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ body {
     right: 2rem;
     top: 2.5rem;
     display: block;
+    overflow: hidden;
   }
   .navbar{
     transition: all ease 300ms;
