--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,12 @@ main{
   }
 }
 
+@media (max-width:500px){
+  iframe{
+    min-height: 50vh !important;
+    }
+}
+
 .meal-of-the-day{
   min-height: 20vh;
   width: auto;
@@ -313,8 +319,8 @@ iframe{
   background-image:linear-gradient(white, white),radial-gradient(circle at top left, #743ad5, #d53a9d);
   background-origin: border-box;
   background-clip: content-box, border-box;
-  min-height: 75vh !important;
-  min-width: 80% !important;
+  min-height: 75vh;
+  min-width: 80% ;
   height: auto;
   width: auto;
 }
