--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,67 @@ body {
   list-style-type: none;
   margin: auto 0;
 }
+.dropdown-btn{
+  position: relative;
+}
+
+.dropdown-menu{
+  z-index: 15;
+  position: absolute;
+  top: calc(100% + 2rem);
+  left: 50%;
+  transform: translate(-50%,0);
+  background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+  border-radius: 6px;
+  outline: 1.5px solid #fff;
+  padding: 1rem;
+  overflow: hidden;
+  transform: translate(-50%,-100%);
+  visibility: hidden;
+  display: none;
+  transition: all ease 300ms;
+}
+.dropdown-menu.open{
+  transform: translate(-50%,0);
+  visibility: visible;
+  display: block;
+}
+.dropdown-menu ul{
+  list-style-type: none;
+}
+.dropdown-menu ul li{
+  width: 100%;
+  position: relative;
+  margin: 4px 0;
+}
+.dropdown-menu ul li a{
+  position: relative;
+  display: block;
+  text-decoration: none;
+  background: #1b1b1b;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  border-radius: 4px;
+  transition: all ease 300ms;
+  overflow: hidden;
+}
+.dropdown-menu ul li a::before{
+  content: '>';
+  position: absolute;
+  left: 0;
+  height: 10px;
+  width: 10px;
+  transform: translateX(-100%);
+  transition: all ease 300ms;
+}
+.dropdown-menu ul li a:hover{
+  color: #d53a9d;
+}
+.dropdown-menu ul li a:hover::before{
+  color: #fff;
+  transform: translateX(0);
+}
+
 @media (max-width:768px){
   .hamburger{
     position: fixed;
