outside click close functionality for dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,8 @@ body {
 .login-btn:hover{
   box-shadow: 4px 8px 20px rgba(52, 35, 75, 0.75);
   outline: 2px solid #743ad5;
-
+  background-color: #1c967b;
+  color: #fff;
 }
 
 main{
