--- a/css/style.css
+++ b/css/style.css
@@ -898,10 +898,11 @@ iframe{
 }
 
 .btn:hover{
-  filter: brightness(0.8);
+  filter: brightness(1.125);
+  box-shadow: 1px 2px 8px #1b1b1b;
 }
 .btn:active{
-  outline: 3px solid #d53a9d;
+  outline: 3px solid #667eea;
 }
 .view-all span{
   text-overflow: ellipsis;
